# Zeng-trade-terminal

./: .gitignore  AUDIT_INDIABULLS_VS_GROWW.md  README.md  README_BACKEND.md  docker-compose.prod.yml  docker-compose.yml  go.work  go.work.sum  package-lock.json  package.json  playwright.config.ts  setup-elastic.sh
app/: globals.css  layout.tsx  page.tsx
database/: schema.postgresql.sql
ec2/: README.md  ecosystem.config.js  nginx.conf  setup.sh  ws-proxy.js
frontend/: Dockerfile  package.json
hooks/: useAccountSync.ts  useAuthStore.ts  useCyberScalp.ts  useDhanTicker.ts  useFyersTicker.ts  useKiteTicker.ts  useLayoutStore.ts  useMarketStore.ts  useMarketTicker.ts  useNeuralUI.ts  useOrderStore.ts  useRuleEngineStore.ts  useSafetyStore.ts  useStrategyStore.ts  useTickerStore.ts  useUpstoxTicker.ts  useWatchlistStore.ts  useWorkerTicker.ts
infra/: docker-compose.yml
lib/: api-client.ts  audio.ts  auth-utils.ts  command-parser.ts  design-tokens.ts  dhan-client.ts  dhan-config.ts  fyers-client.ts  fyers-config.ts  groww-client.ts  instrument-registry.ts  kite-client.ts  kite-instruments.ts  kite-ws-parser.ts  lite-search-engine.ts  market-config.ts  search.ts  upstox-client.ts  upstox-feed-schema.ts  upstox-parser.ts
nginx/: default.conf
playwright-report/: index.html
services/data/tick-processor/: Cargo.toml
services/data/tick-processor/src/: main.rs
test-results/: .last-run.json
tests/: e2e.spec.ts  groww-parity.spec.ts  multi-broker.spec.ts  phase-complete.spec.ts
types/: broker.ts  global.d.ts  layout.ts
utils/: math.ts
(+302 files in other folders)
