[package]
name = "tick-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
rdkafka = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
redis = "0.24"
openssl = { version = "0.10", features = ["vendored"] }
